<resources>
    <string name="app_name">CelenganKu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description_about">Celenganku merupakan sebuah aplikasi yang membantu Anda dalam mengatur keuangan Anda. Aplikasi ini membantu Anda untuk mencatat semua pemasukan dan pengeluaran harian Anda. Aplikasi ini juga akan menyimpan semua riwayat atau history yang telah Anda catat.</string>
    <string name="splash_screen_word">Atur keuanganmu dengan mudah</string>
    <string name="pemasukan_success">Pemasukan berhasil ditambahkan</string>

    <!--    Anggota-->
    <string name="universitas">Dian Nuswantoro</string>

    <string name="anggota1">Maskumambang Padmanegara</string>
    <string name="nim1">A11.2020.12496</string>

    <string name="anggota2">Zarek Gema Galgani</string>
    <string name="nim2">A11.2019.11724</string>

    <string name="anggota3">Denni Ariono</string>
    <string name="nim3">A11.2020.13204</string>
    <string name="hp3">085293490296</string>
    <string name="email3">denievz123@gmail.com</string>
    <string name="title_activity_form">FormActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>